@@ -134,7 +134,9 @@ func TestServerCORS(t *testing.T) {
 	for idx, test := range tests {
 		apm.Handler = newMuxer(
 			&Config{
-				MaxUnzippedSize: 1024 * 1024,
+				MaxUnzippedSize:     1024 * 1024,
+				ConcurrentRequests:  40,
+				MaxRequestQueueTime: time.Second * 10,
 				Frontend: &FrontendConfig{
 					Enabled:      &true,
 					RateLimit:    10,
