@@ -16,12 +16,14 @@ https://github.com/elastic/apm-server/compare/4daa36bd5c144cf9182afc62dc8042af66
 - Use type integer instead of number in JSON schemas where applicable {pull}641[641].
 - Set array item types to string in JSON schemas {pull}651[651].
 - Fix issue preventing server from being stopped {pull}704[704].
+- Limit the amount of concurrent requests being processed{pull}731[731].
 
 ==== Added
 
 - Enriched data with IP and UserAgent {pull}393[393], {pull}701[701].
 - Push errors and transactions to different ES indices {pull}706[706].
 - Allow custom `error.log.level` {pull}712[712].
+- Change `concurrent_request` default from 40 to 5{pull}731[731].
 
 ==== Deprecated
 
